--- a/api/package.json
+++ b/api/package.json
@@ -1,16 +1,19 @@
 {
   "name": "api",
   "version": "0.1.0",
-  "description": "Backend API with GraphQL",
+  "description": "Backend API GraphQL",
   "main": "index.js",
   "license": "MIT",
   "scripts": {
     "dev": "nodemon src/index.ts"
   },
   "dependencies": {
+    "@types/node": "^17.0.8",
     "apollo-server": "^3.6.1",
     "graphql": "^16.2.0",
+    "jest": "^27.4.7",
     "nodemon": "^2.0.15",
-    "ts-node": "^10.4.0"
+    "ts-node": "^10.4.0",
+    "typescript": "^4.5.4"
   }
 }
