--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -1,11 +1,9 @@
 {   
     "extends": "../tsconfig.base.json",
     "compilerOptions": {
-        "lib": ["ES2020"],
         "module": "commonjs",
-        "target": "ES2020",
-        "outDir": "../dist",
-        "types": ["node", "jest"]
+        "outDir": "../../dist",
+        "types": ["node"]
     },
     "exclude": ["**/*.spec.ts"],
     "include": ["**/*.ts"]
