--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@prisma/client": "^3.1.1",
+    "@types/node": "^17.0.8",
     "apollo-server-core": "^3.3.0",
     "apollo-server-express": "^3.3.0",
     "bcrypt": "^5.0.1",
@@ -24,7 +25,8 @@
     "jose": "^4.3.7",
     "nodemon": "^2.0.13",
     "prompt": "^1.2.0",
-    "ts-node": "^10.2.1"
+    "ts-node": "^10.2.1",
+    "typescript": "^4.5.4"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
@@ -33,7 +35,7 @@
     "copyfiles": "^2.4.1",
     "easygraphql-tester": "^6.0.1",
     "graphql-tag": "^2.12.6",
-    "jest": "^27.0.x",
+    "jest": "^27.4.7",
     "jest-mock-extended": "^2.0.4",
     "prisma": "^3.1.1",
     "rimraf": "^3.0.2",
